# west-env

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LEDGER.md  MAINTAINERS.yml  NOTICE  README.md  SECURITY.md  bootstrap.cmd  module.yml  pyproject.toml  scaffold.yml  shell.cmd  test-roundtrip.cmd  test-roundtrip.sh  west-commands.yml  west.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dev-release.yml  doctor
.specsmith/: agents.md.m005.bak  ledger-chain.txt  migration-state.json
.specsmith/governance/: rules.yaml
container/: .env.example.posix  .env.example.win  Dockerfile  README.md  build.cmd  build.sh  push.cmd  push.sh
docs/: ARCHITECTURE.md  FEATURE-PLAN.md  REALIGNMENT-REPORT.md  REQUIREMENTS.md  TESTS.md  TEST_SPEC.md  flashing.md  git-credentials.md  quickstart-linux.md  quickstart-macos.md  quickstart-windows.md  troubleshooting.md
docs/governance/: CONTEXT-BUDGET.20260518T193317.bak  DRIFT-METRICS.md  ROLES.20260518T193317.bak  RULES.md  VERIFICATION.md  WORKFLOW.md
example/: README.md  west-env.yml
example/workspace/: .gitignore  bootstrap.sh  shell.cmd  test-roundtrip-container.sh  west-env.yml  west.yml
example/workspace/scripts/: bootstrap.cmd  bootstrap.sh  shell.cmd  shell.sh  (+2 more)
scripts/: exec.cmd  exec.sh  run.cmd  run.sh  setup.cmd  setup.sh
tests/: test_backend.py  test_bootstrap_e2e.py  test_buildcheck.py  test_config.py  test_container.py  test_docker_integration.py  test_engine.py  test_mode_switch.py  test_nested_podman_in_docker.py  test_new_modules.py  test_podman_integration.py  test_sync.py  test_util.py  test_west_e2e.py
tests/unit/: test_config.py  test_container.py  test_engine.py  test_util.py
west-env-ws/: bootstrap.cmd  test-roundtrip-container.cmd  west.yml
west_commands/: env.py
west_env/: __init__.py  backend.py  buildcheck.py  cache.py  config.py  container.py  credentials.py  engine.py  flash.py  platform.py  sync.py  util.py  vscode.py
(+2 files in other folders)
