[project]
name = "west-env"
version = "0.1.0"
description = "Reproducible build environments for Zephyr, with optional container-backed execution"
requires-python = ">=3.10"
dependencies = [
    "west==1.5.0",
]

[project.entry-points."west.commands"]
env = "west_commands.env:EnvCommand"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "west_env",
  "west_commands",
]
